--- a/project/srcs/requirements/nginx/Dockerfile
+++ b/project/srcs/requirements/nginx/Dockerfile
@@ -1,10 +1,12 @@
-FROM debian:latest
+FROM debian:buster
 
-RUN apt-get udpate && apt-get install -y nginx
+RUN apt-get update && apt-get install -y nginx
 
 COPY conf/nginx.conf /etc/nginx/nginx.conf
 
+COPY conf/index.html /var/www/html/index.html
+
 EXPOSE 80
 
-CMD ["nginx", "-g", "deamon off;"]
+CMD ["nginx", "-g", "daemon off;"]
 
