--- a/project/srcs/requirements/nginx/conf/nginx.conf
+++ b/project/srcs/requirements/nginx/conf/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes: 1
+worker_processes 1;
 
 events {
 	worker_connections 1024;
@@ -6,15 +6,15 @@ events {
 
 http {
 	keepalive_timeout 65;
-	include /etc/nginx/mime.type;
+	include /etc/nginx/mime.types;
 
 	server {
 		listen 80;
 		server_name localhost;
 
 		location / {
-			root /usr/share/nginx/html;
-			index index.html;
+			root /var/www/html;
+			index index.nginx-debian.html;
 		}
 
 	}
