--- a/project/srcs/requirements/nginx/conf/nginx.conf
+++ b/project/srcs/requirements/nginx/conf/nginx.conf
@@ -10,7 +10,14 @@ http {
 
 	server {
 		listen 80;
-		server_name localhost;
+		listen 443 ssl;
+
+		server_name jkollner;
+
+		ssl_certificate /etc/nginx/ssl/nginx.crt;
+		ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+		ssl_protocols TLSv1.2;
 
 		location / {
 			root /var/www/html;
