added wordpress Dockerfile and made the docker-compose fit as well

--- a/project/srcs/docker-compose.yml
+++ b/project/srcs/docker-compose.yml
@@ -11,3 +11,9 @@ services:
         volumes:
             - ./html:/usr/share/nginx/html
         restart: always
+    wordpress:
+        build:
+            context: requirements/wordpress
+            dockerfile: Dockerfile
+        ports:
+            - "8080:80"
