--- a/project/srcs/requirements/nginx/conf/nginx.conf
+++ b/project/srcs/requirements/nginx/conf/nginx.conf
@@ -9,7 +9,6 @@ http {
 	include /etc/nginx/mime.types;
 
 	server {
-		listen 80;
 		listen 443 ssl;
 
 		server_name jkollner;
@@ -22,6 +21,11 @@ http {
 		location / {
 			root /var/www/html;
 			index index.nginx-debian.html;
+		}
+
+		location /home {
+			root /var/www/html;
+			try_files /index.html =404;
 		}
 
 	}
