created a makefile functionality to create .env file when not found. Added mariadb dockerfile and .sh

--- a/project/Makefile
+++ b/project/Makefile
@@ -6,21 +6,30 @@
 #    By: jkollner <jkollner@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/20 09:44:32 by jkollner          #+#    #+#              #
-#    Updated: 2024/02/20 09:47:48 by jkollner         ###   ########.fr        #
+#    Updated: 2024/02/20 10:42:41 by jkollner         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 DOCKER_COMPOSE_FILE = srcs/docker-compose.yml
+ENV:=srcs/.env
 
-all: build up
+all: $(ENV) build up
 
 up:
-	docker-compose -f $(DOCKER_COMPOSE_FILE) up
+	docker-compose -f $(DOCKER_COMPOSE_FILE) --env-file $(ENV) up --build
 
 down:
 	docker-compose -f $(DOCKER_COMPOSE_FILE) down
 
 build:
 	docker-compose -f $(DOCKER_COMPOSE_FILE) build
+
+$(ENV):
+	@echo "Creating ENV file..."
+	@echo "--- MySql/Mariadb ---"
+	@read -p "Enter DB_DATABASE: " value; echo DB_DATABASE=$$value >> $(ENV)
+	@read -p "Enter DB_HOSTNAME: " value; echo DB_HOSTNAME=$$value >> $(ENV)
+	@read -p "Enter DB_USER: " value; echo DB_USER=$$value >> $(ENV)
+	@read -s -p "Enter DB_PASSWORD: " value; echo DB_PASSWORD=$$value >> $(ENV)
 
 .PHONY: all clean fclean re up down build
