--- a/project/srcs/docker-compose.yml
+++ b/project/srcs/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-    custom-nginx:
+    nginx:
         build:
             context: requirements/nginx
             dockerfile: Dockerfile
@@ -10,3 +10,20 @@ services:
         volumes:
             - ./html:/usr/share/nginx/html
         restart: always
+    mariadb:
+        build:
+            context: requirements/mariadb
+            dockerfile: Dockerfile
+        env_file:
+            - .env
+        volumes:
+            - mariadb_data:/var/lib/mysql
+        networks:
+            - incept_network
+
+volumes:
+    mariadb_data:
+
+networks:
+    incept_network:
+        driver: bridge
