changed the debain versions to debian:11 and also changed the makefile to make it safe when cleaning

--- a/project/Makefile
+++ b/project/Makefile
@@ -6,14 +6,17 @@
 #    By: jkollner <jkollner@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/20 09:44:32 by jkollner          #+#    #+#              #
-#    Updated: 2024/02/20 10:42:41 by jkollner         ###   ########.fr        #
+#    Updated: 2024/02/20 11:11:17 by jkollner         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 DOCKER_COMPOSE_FILE = srcs/docker-compose.yml
 ENV:=srcs/.env
+DATA:=./data
 
-all: $(ENV) build up
+all: prerequisits build up
+
+prerequisits: $(ENV) update_host $(DATA)
 
 up:
 	docker-compose -f $(DOCKER_COMPOSE_FILE) --env-file $(ENV) up --build
@@ -31,5 +34,25 @@ $(ENV):
 	@read -p "Enter DB_HOSTNAME: " value; echo DB_HOSTNAME=$$value >> $(ENV)
 	@read -p "Enter DB_USER: " value; echo DB_USER=$$value >> $(ENV)
 	@read -s -p "Enter DB_PASSWORD: " value; echo DB_PASSWORD=$$value >> $(ENV)
+
+fclean:
+	rm -rf $(HOME)/data/wordpress_db
+	rm -rf $(HOME)/data/wordpress_files
+	rm -f $(ENV)
+	docker system prune --all --force --volumes
+	docker volume prune --force
+	docker network prune --force
+	@if [ "`docker volume ls -q`" ]; then \
+		docker volumen rm `docker volume ls -q`; \
+	fi
+	@echo "Fully Cleaned"
+
+update_host:
+	@echo "Updating /etc/hosts..."
+
+$(DATA):
+	@echo "Creating data directory..."
+	@mkdir -p $(HOME)/data/wordpress_db
+	@mkdir -p $(HOME)/data/wordpress_files
 
 .PHONY: all clean fclean re up down build
