--- a/project/srcs/docker-compose.yml
+++ b/project/srcs/docker-compose.yml
@@ -10,6 +10,8 @@ services:
         volumes:
             - ./html:/usr/share/nginx/html
         restart: always
+        networks:
+            - incept_network
     mariadb:
         build:
             context: requirements/mariadb
