--- a/project/srcs/docker-compose.yml
+++ b/project/srcs/docker-compose.yml
@@ -18,6 +18,7 @@ services:
             dockerfile: Dockerfile
         env_file:
             - .env
+        restart: always
         volumes:
             - mariadb_data:/var/lib/mysql
         networks:
