--- a/project/srcs/requirements/mariadb/Dockerfile
+++ b/project/srcs/requirements/mariadb/Dockerfile
@@ -2,13 +2,14 @@ FROM debian:11
 
 RUN apt-get update
 RUN apt-get install -y mariadb-server
+RUN apt-get install -y mariadb-client
 RUN rm -rf /var/lib/apt/lists/*
 
 ARG MYSQL_ROOT_PASSWORD
 
 ENV MYSQL_ROOT_PASSWORD=MYSQL_ROOT_PASSWORD
 
-COPY conf/entrypoint.sh /entrypoint.sh
+COPY tools/entrypoint.sh /entrypoint.sh
 
 EXPOSE 3306
 
