--- a/project/srcs/requirements/nginx/conf/nginx.conf
+++ b/project/srcs/requirements/nginx/conf/nginx.conf
@@ -11,7 +11,7 @@ http {
 	server {
 		listen 443 ssl;
 
-		server_name jkollner;
+		server_name jkollner.42.fr;
 
 		ssl_certificate /etc/nginx/ssl/nginx.crt;
 		ssl_certificate_key /etc/nginx/ssl/nginx.key;
@@ -19,13 +19,7 @@ http {
 		ssl_protocols TLSv1.2;
 
 		location / {
-			root /var/www/html;
-			index index.nginx-debian.html;
-		}
-
-		location /home {
-			root /var/www/html;
-			try_files /index.html =404;
+			try_files $uri $uri/ =404;
 		}
 
 	}
