--- a/project/srcs/requirements/nginx/conf/nginx.conf
+++ b/project/srcs/requirements/nginx/conf/nginx.conf
@@ -21,6 +21,12 @@ http {
 		location / {
 			try_files $uri $uri/ =404;
 		}
+		location ~ .php$ {
+			include fastcgi_params;
+			fastcgi_pass wordpress:9000;
+			# fastcgi_params SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		}
 
+		error_log /var/log/nginx/error.log;
 	}
 }
