--- a/project/srcs/requirements/nginx/conf/nginx.conf
+++ b/project/srcs/requirements/nginx/conf/nginx.conf
@@ -19,12 +19,11 @@ http {
 		ssl_protocols TLSv1.2;
 
 		location / {
-			try_files $uri $uri/ =404;
-		}
-		location ~ .php$ {
-			include fastcgi_params;
-			fastcgi_pass wordpress:9000;
-			# fastcgi_params SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			proxy_pass http://wordpress:9000;
+        	proxy_set_header Host $host;
+        	proxy_set_header X-Real-IP $remote_addr;
+        	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        	proxy_set_header X-Forwarded-Proto $scheme;
 		}
 
 		error_log /var/log/nginx/error.log;
