--- a/project/Makefile
+++ b/project/Makefile
@@ -58,9 +58,8 @@ update_host:
 	@echo "Updating /etc/hosts..."
 	if [ "$EUID" != 0 ]; then
     		sudo @grep -q '$(HOSTNAME)' /etc/hosts && echo 'Domain name already set' || echo "127.0.0.1	$(HOSTNAME)" >> /etc/hosts
-   		exit $?
+   		@echo "Updated hosts"
 	fi
-	@grep -q '$(HOSTNAME)' /etc/hosts && echo 'Domain name already set' || echo "127.0.0.1	$(HOSTNAME)" >> /etc/hosts
 
 $(DATA):
 	@echo "Creating data directory..."
