--- a/project/srcs/requirements/nginx/conf/nginx.conf
+++ b/project/srcs/requirements/nginx/conf/nginx.conf
@@ -1,31 +1,23 @@
-worker_processes 1;
 
-events {
-	worker_connections 1024;
-}
+server {
+    listen 443 ssl http2;
+    server_name lkreuzer.42.fr;
+    root /var/www/html;
+    index index.php;
 
-http {
-	keepalive_timeout 65;
-	include /etc/nginx/mime.types;
+    ssl_certificate /etc/nginx/ssl/ssl_final_cert.crt;
+    ssl_certificate_key /etc/nginx/ssl/ssl_priv_key.key;
+    ssl_protocols TLSv1.3;
 
-	server {
-		listen 443 ssl;
+    location / {
+        try_files \$uri \$uri/ /index.php\$is_args\$args;
+    }
 
-		server_name jkollner.42.fr;
+    location ~ \.php$ {
+        include fastcgi_params; 
+        fastcgi_pass wordpress:9000; 
+        fastcgi_param SCRIPT_FILENAME \$document_root\$fastcgi_script_name;
+    }
 
-		ssl_certificate /etc/nginx/ssl/nginx.crt;
-		ssl_certificate_key /etc/nginx/ssl/nginx.key;
-
-		ssl_protocols TLSv1.2;
-
-		location / {
-			proxy_pass http://wordpress:9000;
-        	proxy_set_header Host $host;
-        	proxy_set_header X-Real-IP $remote_addr;
-        	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        	proxy_set_header X-Forwarded-Proto $scheme;
-		}
-
-		error_log /var/log/nginx/error.log;
-	}
+    error_log /var/log/nginx/error.log;
 }
