--- a/project/srcs/requirements/nginx/conf/nginx.conf
+++ b/project/srcs/requirements/nginx/conf/nginx.conf
@@ -1,7 +1,7 @@
 
 server {
     listen 443 ssl http2;
-    server_name lkreuzer.42.fr;
+    server_name jkollner.42.fr;
     root /var/www/html;
     index index.php;
 
