--- a/project/srcs/requirements/nginx/conf/nginx.conf
+++ b/project/srcs/requirements/nginx/conf/nginx.conf
@@ -5,8 +5,8 @@ server {
     root /var/www/html;
     index index.php;
 
-    ssl_certificate /etc/nginx/ssl/ssl_final_cert.crt;
-    ssl_certificate_key /etc/nginx/ssl/ssl_priv_key.key;
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
     ssl_protocols TLSv1.3;
 
     location / {
