--- a/project/srcs/requirements/nginx/Dockerfile
+++ b/project/srcs/requirements/nginx/Dockerfile
@@ -1,9 +1,11 @@
 FROM debian:11
 
-RUN apt-get update && apt-get install -y nginx openssl
+RUN apt-get update -y
+RUN apt-get install nginx -y
+RUN apt-get install openssl -y
 
-COPY ./conf/default.conf /etc/nginx/nginx.conf
-COPY ./conf/nginx.conf /etc/nginx/conf.d/default.conf
+# COPY ./conf/nginx.conf /etc/nginx/nginx.conf
+COPY ./conf/default.conf /etc/nginx/conf.d/default.conf
 
 RUN mkdir -p /etc/nginx/ssl
 RUN mkdir -p /run/nginx
