--- a/project/srcs/requirements/nginx/conf/default.conf
+++ b/project/srcs/requirements/nginx/conf/default.conf
@@ -1,29 +1,23 @@
-user  www-data;
-worker_processes  1;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+server {
+    listen 443 ssl http2;
+    server_name jkollner.42.fr;
+    root /var/www/html;
+    index index.php;
 
-events {
-    worker_connections  1024;
-}
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    ssl_protocols TLSv1.3;
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    location / {
+        try_files $uri $uri/ /index.php$is_args$args;
+    }
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    location ~ \.php$ {
+        include fastcgi_params; 
+        fastcgi_pass wordpress:9000; 
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    include /etc/nginx/conf.d/*.conf;
+    error_log /var/log/nginx/error.log;
 }
